# lollive

./: .gitignore  .sconsign.dblite  .ycm_extra_conf.py  Authentication.cpp  Authentication.h  CommandParser.cpp  CommandParser.h  CompileTimeSettings.h  ConfigManager.cpp  ConfigManager.h  ConversionUtility.h  CvWrapper.cpp  CvWrapper.h  Data.h  Dispatch.cpp  Dispatch.h  FileUtility.h  GameConstants.h  ImageAnalyzer.cpp  ImageAnalyzer.h  ImageSVM.cpp  ImageSVM.h  LeagueChampionData.h  LeagueChampionDatabase.cpp  LeagueChampionDatabase.h  LeagueChampionSVM.cpp  LeagueChampionSVM.h  LeagueConstants.h  LeagueDraftBanAnalysis.cpp  LeagueEvent.cpp  LeagueEvent.h  LeagueEventAnalysis.cpp  LeagueEventDatabase.cpp  LeagueEventDatabase.h  LeagueGameStateAnalysis.cpp  LeagueImageAnalyzer.cpp  LeagueImageAnalyzer.h  LeagueItemData.h  LeagueItemDatabase.cpp  LeagueItemDatabase.h  (+44 more)
Config/: general.ini  league.ini  server_template.ini
Config/League/: lcs.ini
Data/: LEAGUE_PROPERTIES.txt  generate_tesseract_words.py  lol.user-words
Data/Champions/: database.txt  database.xml  generate_champion_database.py  generate_champion_simple.py
Data/Items/: database.xml  generate_item_database.py  items.json  items.json0
Data/Objectives/: ChaosLaneTower_Icon.dds  OrderGateTower_Icon.dds  database.xml  killIcon_iced.dds  killIcon_normal.dds  killIcon_streak.dds  (+1 more)
Debug/: LoLLive.ilk  vc120.idb
inih/: INIReader.cpp  INIReader.h  ini.h
rekoglib/: .ycm_extra_conf.py  README.md
rekoglib/offline/leagueChampionTrainer/: CMakeLists.txt  main.cpp
tessdata/: lol.traineddata  lol.user-words
(+200 files in other folders)
